--- a/homework/HO9/HO9.Rnw
+++ b/homework/HO9/HO9.Rnw
@@ -64,7 +64,7 @@ ybarhh <- ybarhh.fun(N, n, y, p)
 @
 \end{singlespace}
 
-\item The standard error of the Hansen-Hurwitz estimate in part (a) is $5.560$. See my work below.
+\item The standard error of the Hansen-Hurwitz estimate in part (a) is $4.716$. See my work below.
 
 \begin{singlespace}
 <<sehh, echo=TRUE>>=
@@ -118,7 +118,7 @@ pi.16 <- 0.02 + 0.04*2 + 0.08*2 + 0.1
 pi.23 <- 0.02*3 + 0.1*3
 pi.24 <- 0.02 + 0.04*2 + 0.1*2 + 0.08
 pi.25 <- 0.02 + 0.04*2 + 0.1*2 + 0.08
-pi.26 <- 0.02 + 0.04*2 + 0.1*3 + 0.08
+pi.26 <- 0.02 + 0.04*2 + 0.1*2 + 0.08
 pi.34 <- 0.02 + 0.08*2 + 0.1*3
 pi.35 <- 0.02 + 0.08*2 + 0.1*3
 pi.36 <- 0.02 + 0.08*2 + 0.1*3
@@ -134,7 +134,7 @@ require(xtable)
 xtable(cbind(pi, pi.vals))
 @
 
-\item The variance of the Horvitz-Thompson estimator of $t$ is estimated to be $108.75$ using Equation (72) on page $142$ of the notes. See my work below.
+\item The variance of the Horvitz-Thompson estimator of $t$ is estimated to be $-29.40$ using Equation (72) on page $142$ of the notes. See my work below. Clearly the variance estimate is not accurate, because a variance cannot be negative. In this case, it would be more appropriate to use the Brewer and Hanif variance estimate.
 
 \begin{singlespace}
 <<varianceht, echo=TRUE>>=
@@ -142,9 +142,16 @@ y <- c(4, 4, 8, 8)
 pi <- c(pi.1, pi.2, pi.4, pi.6)
 pi.order2 <- c(pi.12, pi.14, pi.16, pi.24, pi.26)
 
-var.tht <- sum((1/pi^2 - 1/pi)*y^2) + (1/pi.1*1/pi.2-1/pi.12)+
-  (1/pi.1*1/pi.4-1/pi.14) + (1/pi.1*1/pi.6 - 1/pi.16) + (1/pi.2*1/pi.4-1/pi.24) +
-  (1/pi.4*1/pi.6 - 1/pi.46)
+var.tht <- (1/(pi.1^2) - 1/pi.1)*y[1]^2 + 
+  (1/(pi.2^2) - 1/pi.2)*y[2]^2 + 
+  (1/(pi.4^2) - 1/pi.4)*y[3]^2 + 
+  (1/pi.6^2 - 1/pi.6)*y[4]^2 + 
+  2*((1/pi.1*1/pi.2-1/pi.12)*y[1]*y[2]+
+  (1/pi.1*1/pi.4-1/pi.14)*y[1]*y[3] + 
+    (1/pi.1*1/pi.6 - 1/pi.16)*y[1]*y[4] + 
+    (1/pi.2*1/pi.4-1/pi.24)*y[2]*y[3] + 
+    (1/pi.2*1/pi.6-1/pi.26)*y[2]*y[4] +
+  (1/pi.4*1/pi.6 - 1/pi.46)*y[3]*y[4])
 @
 \end{singlespace}
 
